tests/query_errors/window_event_in_tick/error.txt
Error: 
    5 |   event + 1
      |   ^^^^^^^^^ `even` isn't accessible in this context